--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+crispy-bootstrap4 = "*"
+django-crispy-forms = "*"
+pillow = "*"
+xhtml2pdf = "*"
+django-widget-tweaks = "*"
 
 [dev-packages]
 
